# wrapdevtools

./: .editorconfig  .gitignore  CONTRIBUTING.md  README.md  setup.cfg
build-aux/: rtd-requirements.txt
docs/: conf.py  index.rst  legal_information.rst
docs/workflows/: #wrapping-glfw.org#  wrapping-glfw.rst
tests/: test_extractpatch.py
tests/data/simple/: note.txt
tests/data/simple project/subprojects/: simple.wrap
wrapdevtools/: __init__.py  extractpatch.py  gentestproj.py  listsrc.py  newwrap.py  tocmake.py
