[metadata]
name = wrapdevtools
version = 0.1.0
description = utilities for meson wrap maintainers (python)

[options]
packages = find:

[options.entry_points]
console_scripts =
    wrapdev-newwrap = wrapdevtools.newwrap:main
    wrapdev-extractpatch = wrapdevtools.extractpatch:main

[build_sphinx]
source-dir=docs