[metadata]
name = wrapdevtools
version = 0.1.0
description = utilities for meson wrap maintainers (python)

[options]
packages = find:
tests_require =
   pytest
install_requires = 
   meson

[options.entry_points]
console_scripts =
    wrapdev-newwrap = wrapdevtools.newwrap:main
    wrapdev-extractpatch = wrapdevtools.extractpatch:main
    wrapdev-listsrc = wrapdevtools.listsrc:main
    wrapdev-tocmake = wrapdevtools.tocmake:main
    wrapdev-gentestproj = wrapdevtools.gentestproj:main

[options.extras_require]
dev =
    sphinx
    sphinxcontrib-autoprogram
    sphinx-autodoc-typehints

[build_sphinx]
source-dir=docs
